--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -35,27 +35,30 @@
 
 .isgreen {
 	background-color: #66FF00;
-	height: 100px;
+	height: 90px;
 	width:100px; 
 	text-align: center;
 	vertical-align: middle;
 	display: block;
+	padding-top: 10px;
 }
 
 .isred {
 	background-color: #FF0000;
-	height: 100px;
+	height: 90px;
 	width:100px; 
 	text-align: center;
 	vertical-align: middle;
 	display: block;
+	padding-top: 10px;
 }
 
 .isgrey {
 	background-color: #BBBBBB;
-	height: 100px;
+	height: 90px;
 	width:100px; 
 	text-align: center;
 	vertical-align: middle;
 	display: block;
+	padding-top: 10px;
 }
