--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -22,6 +22,7 @@
 	padding: 5px;
 	display: block;
 	float: left;
+	margin: 1px;
 }
 
 .displayGridSubheading {
@@ -31,6 +32,11 @@
 	float: left;
 	font-weight: bold;
 	font-size: larger;
+	border-width: 2px;
+	border-color: gray;
+	border-style: solid;
+	margin-bottom: 5px;
+	
 }
 
 .displayGridCell {
@@ -44,6 +50,8 @@
 	float: left; 
 	font-weight: normal;
 	font-size: medium;
+	border-style: solid;
+	border-width: 2px;
 
 }
 
@@ -56,12 +64,16 @@
 }
 .isgreen {
 	background-color: #00FF33;
+		border-color: #00CC00;
 }
 
 .isred {
 	background-color: #FF0000;
+		border-color: #800000;
 }
 
 .isgrey {
 	background-color: #BBBBBB;
+		border-color: #999999;
 }
+
