--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -53,6 +53,11 @@
 	padding-left: 10px;
 }
 
+.displayGridCellWrapper {
+	display: block;
+	float: left; 
+}
+
 .displayGridCell {
 	height: 50px;
 	width:150px; 
